--- a/css/templatemo-main.css
+++ b/css/templatemo-main.css
@@ -298,7 +298,7 @@ nav a:hover::before {
   background-image: url(../img/first_bg.jpg);
 }
 .slides .slide:nth-child(2) {
-  background-image: url(../img/second_bg.jpg);
+  background-image: url(../img/first_bg.jpg);
 }
 .slides .slide:nth-child(3) {
   background-image: url(../img/third_bg.jpg);
@@ -514,6 +514,18 @@ nav a:hover::before {
 	margin-top: 0px;
 }
 
+.third-content h4 {
+	font-size: 16px;
+	text-transform: uppercase;
+	font-weight: 700;
+	color: #fff;
+	letter-spacing: 0.5px;
+	display: inline-block;
+	padding-bottom: 10px;
+	margin-bottom: 20px;
+	margin-top: 0px;
+}
+
 .third-content p {
 	font-size: 13px;
 	color: #fff;
@@ -673,6 +685,10 @@ nav a:hover::before {
   margin-bottom: 25px;
 }
 
+.fifth-content h2 {
+	color: #fff;
+}
+
 .fifth-content button {
 	max-width: 100%;
 	width: 100%;
@@ -749,7 +765,7 @@ nav a:hover::before {
 		margin-bottom: 30px;
 	}
 
-	.third-content .first-section .right-image {
+	.third-content .first-section {
 		margin-left: 0px;
 	}
 
